# MovieSubGR

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  STT.py  audio_extraction.py  main.py  noise_reduction.py  pyproject.toml  subtitles_emb.py  subtitles_generation.py  translator.py
.github/workflows/: ci.yml
src/subsmith/: __init__.py  cli.py  config.py  factory.py  logging.py  models.py  pipeline.py
src/subsmith/media/: __init__.py  base.py  ffmpeg.py
src/subsmith/subtitles/: __init__.py  srt_writer.py
src/subsmith/transcription/: __init__.py  base.py  whisper_transcriber.py
src/subsmith/translation/: __init__.py  base.py  concurrent.py  google.py
tests/: conftest.py  test_config.py  test_ffmpeg.py  test_models.py  test_pipeline.py  test_srt_writer.py  test_translation.py
