[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subsmith"
version = "0.1.0"
description = "Automatic subtitle generation pipeline: transcribe, translate, and burn subtitles into video"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Thanos Akrivos" }]
keywords = ["subtitles", "whisper", "speech-to-text", "translation", "ffmpeg", "srt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "srt>=3.5",
    "deep-translator>=1.11",
    "tenacity>=8.2",
]

[project.optional-dependencies]
transcription = [
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
subsmith = "subsmith.cli:app"

[project.urls]
Repository = "https://github.com/akrvs/Subsmith"

[tool.hatch.build.targets.wheel]
packages = ["src/subsmith"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/subsmith/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "."]

[tool.mypy]
python_version = "3.10"
packages = ["subsmith"]
ignore_missing_imports = true
